--- a/_config.yml
+++ b/_config.yml
@@ -1,89 +1,48 @@
-# WhatATheme
 markdown: kramdown
-
-# URL of the Site
 url: ''
-# Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: 
-
-# Title of the Site
-title: What A Theme
-# Description of the Site
-description: A customizable Jekyll portfolio theme
-# URL of Image of the Site
-site-image: /WhatATheme/assets/images/meta.jpg
-# Keywords of the Site
-site-keywords: Site, Template, Theme
-# URL for the Image of custom Favicon
-favicon-url: 
-
-# URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
-
-# Social Media and Contact
-# If you don't want to use any icon, you can leave them blank.
-email: thedevslot@gmail.com
-facebook_username: thedevslot
-twitter_username: thedevslot
-instagram_username: thedevslot
-linkedin_username: thedevslot
-github_username:  thedevslot
-youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
-reddit_username: /
-behance_username: /
-dribbble_username: /
-spotify_username: /
-
-# Google Analytics
+baseurl: null
+title: Coding Flamingo
+description: Learn to code with Coding Flamingo
+site-image: /WhatATheme/assets/images/coding-flamingo-01.jpg
+site-keywords: 'Coding, Tutorials, Azure, AWS, Blazor, .NET'
+favicon-url: 'https://codingflamingo.blob.core.windows.net/codingflamingo/favicon.ico'
+heroimage: >-
+  https://codingflamingo.blob.core.windows.net/codingflamingo/coding-flamingo-01.jpg
+email: codingflamingo@gmail.com
+linkedin_username: igalfsg
+github_username: coding-flamingo
+youtube_channel_id: UCjGgqULI1EX0VEoizrD6PYA
+reddit_username: TacoT999
 google-analytics: UA-163806439-1
-
-# Disqus
-disqus-shortname: thedevslot
-
-# Name of the Author
-author-name: TheDevsLot
-# URL for the Image of the Author
-author-image: https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
-# 60 Words About the Author
-author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
-# URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
-author-url: https://github.com/thedevslot
-
-# SASS
+author-name: Coding Flamingo
+author-image: >-
+  https://codingflamingo.blob.core.windows.net/codingflamingo/coding-flamingo-07.png
+author-about: >-
+  Coding Flamingo is a YouTube channel and blog that I created to share coding
+  best practices.
+author-url: 'https://github.com/coding-flamingo'
 sass:
   sass_dir: _sass
   style: compressed
-
-# Build settings
 plugins:
   - jekyll-admin
   - jekyll-feed
-
-# Permalink
-permalink: "blog/:title"
-
-# Compress
+permalink: 'blog/:title'
 compress_html:
   clippings: all
-
-# Defaults
 defaults:
-  -
-    scope:
-      type: 'posts'
+  - scope:
+      type: posts
     values:
       layout: post
-      post-image: ""
-      description: ""
+      post-image: ''
+      description: ''
       tags:
-        - ""
-  -
-    scope:
-      type: 'pages'
+        - ''
+  - scope:
+      type: pages
     values:
       layout: page
-
-# Exclude
 exclude:
   - .sass-cache/
   - .jekyll-cache/
